test/error/FieldPublic.fu
public class Test
{
	public //ERROR: Field cannot be public
		int Foo;
}
